--- a/Inventory Management.vcxproj
+++ b/Inventory Management.vcxproj
@@ -150,6 +150,9 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="UserService.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
